# cookiecutter-python-library

./: .gitignore  LICENSE.txt  README.md  cookiecutter.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: dependabot-auto-approve.yml  dependabot-auto-merge.yml
hooks/: __init__.py  post_gen_project.py  pre_gen_project.py
{{ cookiecutter.__project_name }}/: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
{{ cookiecutter.__project_name }}/tests/: __init__.py  conftest.py
{{ cookiecutter.__project_name }}/tests/test_{{ cookiecutter.__package_name }}/: __init__.py  test_main.py
{{ cookiecutter.__project_name }}/{{ cookiecutter.__package_name }}/: __init__.py  main.py
