[tool.poetry]
name = "Cookiecutter Python Library"
version = "0.1.0"
description = "This is a cookiecutter template for a python library."
authors = ["Mike Lane <mikelane@gmail.com>"]
readme = "README.md"
packages = [{include = "cookiecutter-python-library"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.black]
line-length = 120
target-version = ['py311']
skip-string-normalization = true

[tool.isort]
profile = "black"
multi_line_output = 3
force_grid_wrap = 2

[tool.ruff]
select = [
    "A",
    "ANN",
    "ARG",
    "B",
    "BLE",
    "C",
    "C4",
    "COM",
    "D",
    "DTZ",
    "E",
    "ERA",
    "F",
    "FBT",
    "G",
    "I",
    "INP",
    "N",
    "PGH",
    "PIE",
    "PLE",
    "PLR",
    "PT",
    "PTH",
    "Q",
    "RSE",
    "RET",
    "S",
    "SIM",
    "SLF",
    "T20",
    "TID",
    "TCH",
    "W",
    "YTT"
]
ignore = [
    "ANN101",  # TODO: Remove this once beartype supports the Self type.
    "TCH001",  # Since we use beartype, our type checks happen at runtime, so we don't want htem in a type-checking block
]

fixable = [
    "A",
    "ANN",
    "B",
    "C4",
    "COM",
    "D",
    "E",
    "F",
    "G",
    "I",
    "PIE",
    "PLR",
    "PLW",
    "PT",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "TCH",
    "TID",
    "TRY",
    "W"
]
unfixable = []

fix = true

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
# Same as Black.
line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py311"

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]
"tests/**/*.py" = ["ANN201", "ANN001", "D100", "D103", "S101"]
"hooks/**/*.py" = ["T201"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"
multiline-quotes = "single"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"

[tool.mypy]
strict = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
